<resources>
    <string name="app_name">BAMX Morelos</string>

    <!--//Login -->
    <string name="edtNombreLogin">Nombre</string>
    <string name="edtPasswordLogin">Contraseña</string>
    <string name="btnLoginLogin">Iniciar Sesión</string>
    <string name="btnRegistroLogin">Regístrate</string>
    <string name="tvEntrarLogin">Bienvenido/ a</string>
    <string name="tvRegistroLogin">¿Aún no tienes cuenta?</string>

    <!--//Registro -->
    <string name="edtNombreRegistro">Nombre</string>
    <string name="edtFolioRegistro">Folio</string>
    <string name="edtPasswordRegistro">Contraseña</string>
    <string name="edtTelefonoRegistro">Teléfono</string>
    <string name="btnRegistroRegistro">Crear Cuenta</string>
    <string name="tvRegistro">Registro</string>
    <string name="btnCancelarRegistro">Cancelar</string>
    <string name="edtCorreoRegistro">Correo</string>
    <string name="pwdParameters">Mínimo x y máximo x caracteres</string>

    <!--//Password -->
    <string name="btnCambioPassword">Olvidé mi contraseña</string>
    <string name="btnCambiarPassword">Cambiar</string>
    <string name="btnCancelarPassword">Cancelar</string>
    <string name="edtNuevaPassword">Nueva Contraseña</string>
    <string name="edtConfirmarPassword">Confirmar Contraseña</string>
    <string name="tvActualizarPassword">Cambiar Contraseña</string>

    <!--//Landing -->
    <string name="btnEncuestaLanding">Encuesta</string>
    <string name="btnFamiliaLanding">Mi Familia</string>

    <!--//Main -->
    <string name="btnStartMain">Toca para comenzar</string>

    <!--//Familia -->
    <string name="tvTitleFamilia">Mi Familia</string>
    <string name="fbtnDescriptionFamilia">Agregar miembro</string>
    <string name="titleFamilia">Mi Familia</string>

    <!--//Contacto -->
    <string name="tvTitleContacto">Contacto</string>
    <string name="tvMensajeContacto">¡Estamos aquí para apoyarte!</string>

    <!--//Agregar -->
    <string name="edtNombreMiembro">Nombre(s)</string>
    <string name="edtApellidoMaterno">Apellido Materno</string>
    <string name="edtApellidoPaterno">Apellido Paterno</string>
    <string name="edtPesoMiembro">Peso</string>
    <string name="edtAlturaMiembro">Altura</string>
    <string name="edtDate">dd/mm/yyyy</string>
    <string name="tvTitleMiembro">Agregar Miembro</string>
    <string name="btnAgregarMiembro">Agregar</string>
    <string name="cbLeader">Lider de familia</string>
    <string name="cbPregnant">Estoy embarazada</string>


    <!-- //General -->
    <string name="logoBAMX">Logo BAMX</string>


    <!-- //Recycler -->
    <string name="txtNombre">Persona</string>
    <string name="txtEdad">Edad</string>
    <string name="cDescriptionElemento">Perfil</string>

    <!-- //Dashboard -->
    <string name="tvTitleDashboard">Dashboard</string>
    <string name="btnRecomendacionesInfo">Recomendaciones</string>
    <string name="btnLogoutInfo">Cerrar Sesión</string>
    <string name="tiedHintResponse">Escribe tu respuesta</string>
    <string name="btnAnteriorEncuesta">Anterior</string>
    <string name="btnSiguienteEncuesta">Siguiente</string>
    <string name="iBtnRegresar">Regresar</string>
    <string name="btnEmpezarEncuesta">Empezar</string>
    <string name="tvNamePicker">¿Quién está respondiendo?</string>
    <string name="btnLogout">Cerrar Sesión</string>
    <string name="tvAboutLanding">¿Quiénes somos?</string>
    <string name="tvDescriptionLanding">Somos una OSC (Organización de la sociedad civil) sin fines de lucro y apartidista, nuestra red está compuesta por 54 Bancos de Alimentos los cuales rescatan alimento a lo largo de toda la cadena de valor para llevarlo a familias, comunidades e instituciones que lo necesitan y así mejorar la alimentación y la nutrición en México.</string>
    <string name="textSubmit">Enviar</string>
    <string name="btnSubmit">Enviar</string>
    <string name="btnEncuestaInfo">Encuesta</string>
    <string name="tvCargando">Cargando...</string>
    <string name="txtEdadElemento">Años</string>
    <string name="btnCerrarContacto">Cerrar</string>
    <string name="correoBamx">atencion@bamorelos.org</string>
    <string name="telBamxSecundario">777 317 5516</string>
    <string name="telBamxPrimario">777 102 1334</string>
    <string name="direccionBamxCuernavaca">Eugenio J. Cañas #11, entre Acacias y Priv. Compostela, Lomas de la Pradera en Cuernavaca, Morelos. C.P. 62175</string>
    <string name="centroCva">Cuernavaca</string>
    <string name="btnEditarMiembro">Editar Miembro</string>
    <string name="btnConfirmarEdit">Confirmar Cambios</string>
    <string name="btnEliminarEditar">Eliminar</string>
    <string name="diseaseDiabetes">Diabetes</string>
    <string name="diseaseObesidad">Obesidad</string>
    <string name="diseaseHipertension">Hipertensión arterial</string>
    <string name="inicioMenu">Inicio</string>
    <string name="familiaMenu">Familia</string>
    <string name="menuMenu">Menú</string>
    <string name="recDiabetes">*Evitar la adición de azúcares en la dieta habitual \n*Llevar un monitoreo constante para llevar un mejor control \n*Evitar llevar una vida sendentaria, realizando como mínimo 45 minutos de ejercicio al día 3 veces a la semana \n*Aumentar el consumo de alimentos de origen vegetal \n*Dimisnuir el consumo de bebidas azucaradas \n*Realizar ejercicio de manera constante</string>
    <string name="recHipertension">*Reducir el consumo de sodio (sal) \n*Evitar preparar sus alimentos fritos y capeados y preferir alimentos asados o en horno \n*Evitar el consumo de grasas trans \n*Llevar un monitoreo constante para llevar un mejor control \n*Evitar llevar una vida sendentaria, realizando como mínimo 45 minutos de ejercicio al día 3 veces a la semana \n*Preferir alimentos poco procesados/frescos \n*Realizar ejercicio de manera constante</string>
    <string name="recObesidad">*Evitar la adición de azúcares en la dieta habitual \n*Evitar preparar sus alimentos fritos y capeados y preferir alimentos asados o en horno \n*Evitar el consumo de grasas trans \n*Llevar un monitoreo constante para llevar un mejor control \n*Evitar llevar una vida sendentaria, realizando como mínimo 45 minutos de ejercicio al día 3 veces a la semana \n*Aumentar el consumo de alimentos de origen vegetal \n*Dimisnuir el consumo de bebidas azucaradas \n *Aumentar la ingesta de alimentos integrales y ricos en fibra *Preferir alimentos poco procesados/frescos *Realizar ejercicio de manera constante</string>
    <string name="recGenerales">Generales</string>
    <string name="recGeneralesLista">*Llevar una dieta variada y equilibrada \n*Disminuir el consumo de ácidos grasos saturados y preferir el consumo de acidos grasos mono y poliinsaturados \n*Llevar una alimentación que cubra las necesidades de cada integrante de la familia \n*Realizar ejercicio físico mínimo 30 minutos al día, combinando ejercicios aeróbicos y anaeróbicos \n*Tomar mínimo 2 litros de agua simple al día para evitar una deshidratación</string>


</resources>