<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAgregar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgDark"
    tools:context=".Agregar">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/locatodb"
        android:text="@string/tvTitleMiembro"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBtnBackAgregar" />

    <EditText
        android:id="@+id/edtNombresAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/edtNombreMiembro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/edtAPaternoAgegar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edtApellidoPaterno"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edtNombresAgregar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtNombresAgregar"
        app:layout_constraintTop_toBottomOf="@+id/edtNombresAgregar" />

    <EditText
        android:id="@+id/edtAMaternoAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edtApellidoMaterno"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edtAPaternoAgegar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtAPaternoAgegar"
        app:layout_constraintTop_toBottomOf="@+id/edtAPaternoAgegar" />

    <EditText
        android:id="@+id/edtPesoAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/edtPesoMiembro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/edtAlturaAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtDate"
        app:layout_constraintTop_toBottomOf="@+id/edtDate" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/edtDate"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/spSexoAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtAMaternoAgregar"
        app:layout_constraintTop_toBottomOf="@+id/edtAMaternoAgregar" />

    <Spinner
        android:id="@+id/spSexoAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@android:array/emailAddressTypes"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtDate"
        app:layout_constraintEnd_toEndOf="@+id/edtAMaternoAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edtDate"
        app:layout_constraintTop_toTopOf="@+id/edtDate" />

    <EditText
        android:id="@+id/edtAlturaAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/edtAlturaMiembro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spSexoAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edtPesoAgregar"
        app:layout_constraintTop_toTopOf="@+id/edtPesoAgregar" />

    <CheckBox
        android:id="@+id/cbLiderAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cbLeader"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toStartOf="@+id/cbPregnantAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtPesoAgregar"
        app:layout_constraintTop_toBottomOf="@+id/edtPesoAgregar" />

    <CheckBox
        android:id="@+id/cbPregnantAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/cbPregnant"
        android:textColor="@color/purple_700"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edtAlturaAgregar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbLiderAgregar"
        app:layout_constraintTop_toBottomOf="@+id/edtPesoAgregar" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnAgregarMiembro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cbPregnantAgregar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cbLiderAgregar"
        app:layout_constraintTop_toBottomOf="@+id/cbLiderAgregar"
        app:layout_constraintVertical_bias="0.337" />

    <ImageButton
        android:id="@+id/iBtnBackAgregar"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00FFFFFF"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>